deploy/k8s/service/order/order-deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-svc
  namespace: shopping
  labels:
    app.kubernetes.io/name: order-svc
    app.kubernetes.io/version: v1.0
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: order
    app.kubernetes.io/version: v1.0
  ports:
    - name: http
      port: 80
      targetPort: 8083
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: order
  namespace: shopping
  labels:
    app.kubernetes.io/name: order
    app.kubernetes.io/version: v1.0
spec:
  serviceName: order-svc
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: order
      app.kubernetes.io/version: v1.0
  template:
    metadata:
      labels:
        app.kubernetes.io/name: order
        app.kubernetes.io/version: v1.0
    spec:
        containers:
          - name: order
            image: localhost:5000/go-shopping-poc/order:1.0
            imagePullPolicy: Always
            ports:
              - containerPort: 8083
            readinessProbe:
              httpGet:
                path: /health
                port: 8083
              initialDelaySeconds: 5
              periodSeconds: 10
              timeoutSeconds: 5
              failureThreshold: 3
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: order-ingress
  namespace: shopping
  labels:
    app.kubernetes.io/name: order-ingress
    app.kubernetes.io/version: v1.0
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure,web
spec:
  rules:
    - host: pocstore.local
      http:
        paths:
          - path: /api/v1/orders
            pathType: Prefix
            backend:
              service:
                name: order-svc
                port:
                  number: 80
  tls:
    - hosts:
        - pocstore.local
      secretName: pocstorelocal-tls
